forgot to commit my work

--- a/public/stylesheets/lib.css
+++ b/public/stylesheets/lib.css
@@ -3,8 +3,8 @@
 }
 
 body, input {
-  font-family: 'Roboto Condensed', sans-serif;
-  margin: 0;
+  font-family: 'Raleway', sans-serif;
+  margin: 2px;
   color: #244751;
 }
 
